# vis_23

./: .gitignore  README.md  docker-compose-remote.yml  docker-compose.yml  pom.xml  pyproject.toml
.github/workflows/: images.yml
category-service/: .env  Dockerfile  README.md  package-lock.json  package.json
category-service/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
category-service/src/models/: category.model.ts
category-service/src/product-client/: product-client.module.ts  (+1 more)
docker/: Dockerfile  DockerfileMySQL
k8s/: category-deployment.yaml  category-service.yaml  db-config-map.yaml  db-secret.yaml  mysql.yaml  product-deployment.yaml  product-service.yaml  pvc.yaml
k8s/apache/: 000-default.conf  Dockerfile  deployment.yaml  index.html
k8s/category/: category-service.yaml
k8s/db/: mysql.yaml
k8s/eShop/: eShop-deployment.yaml  eShop-service.yaml
k8s/istio/: istio.yaml
k8s/product/: product-deployment.yaml  product-service.yaml
productservice/: .dockerignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt
productservice/productmanager/: manage.py  models.py  serializers.py  views.py
productservice/productmanager/productmanager/: asgi.py  exceptions.py  filters.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
productservice/productmanager/productmanager/migrations/: 0001_initial.py  0002_alter_product_category_id.py  0003_alter_product_name.py
productservice/test/: locustfile2.py  test.py
sql/: initial.sql
test/: test.py
test-locust/: KategorieAnlegen.py  ProduktAnlegen.py
(+8 files in other folders)
