[tool.poetry]
name = "vis_23"
version = "0.1.0"
description = ""
authors = ["linxside <git@linux-inside.de>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^3.2"
djangorestframework = "^3.14.0"
mysqlclient = "^2.1.1"
requests = "^2.29.0"
PyYAML = "^6.0"
uritemplate = "^4.1.1"
django-filter = "^23.2"

[tool.poetry.dev-dependencies]
mypy = "^1.2.0"
types-requests = "^2.30.0"
django-stubs = {version = "^4.2.0", extras = ["compatible-mypy"]}
djangorestframework-stubs = {version = "^3.14.0", extras = ["compatible-mypy"]}
django-filter-stubs = "^0.1.3"
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
